# chip8-emulator

./: Cargo.toml  README.md
chip8_core/src/: lib.rs
emulator-core/: Cargo.toml
emulator-core/src/: font.rs  lib.rs
src/: main.rs
